# CPU-usage-tracker

./: .gitignore  CMakeLists.txt  build_cmake.sh  makefile  readme.md
src/: main.c
src/analyzer/: CMakeLists.txt  analyzer.c  analyzer.h
src/cpu/: CMakeLists.txt  cpu.c  cpu.h
src/printer/: CMakeLists.txt  printer.c  printer.h
src/queue/: CMakeLists.txt  queue.c  queue.h
src/reader/: CMakeLists.txt  reader.c  reader.h
src/utils/: CMakeLists.txt  sigint.c  sigint.h  utils.c  utils.h  watchdog.c  watchdog.h
tests/: CMakeLists.txt  tests.c  tests.h
